[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trypto"
version = "0.1.0"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
description = "A Python project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[tool.setuptools]
packages = ["trypto"]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
